--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -74,6 +74,7 @@ label.atk-input-label {
     position: relative;
     input {
         padding-right: 1.4em;
+        width: 100%;
     }
     *[class*=icon] {
         .position(@t:50%, @r:0.5em);
