--- a/playground/css/style-example-login.css
+++ b/playground/css/style-example-login.css
@@ -5270,6 +5270,7 @@ label.atk-input-label em {
 }
 .atk-input-icon input {
   padding-right: 1.4em;
+  width: 100%;
 }
 .atk-input-icon *[class*=icon] {
   position: absolute;
@@ -6043,6 +6044,9 @@ ul[class*=atk-menu].atk-menu-vertical > li *[class*=atk-menu] {
 .atk-inline {
   display: inline-block;
 }
+.atk-block {
+  display: block;
+}
 .atk-jackscrew {
   width: 100%;
 }
@@ -6250,7 +6254,8 @@ img.atk-shape-circle {
   border-color: #ffffff;
 }
 .atk-swatch-white,
-a:link.atk-swatch-white {
+a:link.atk-swatch-white,
+.atk-swatch-white:visited {
   color: black;
 }
 .atk-swatch-white hr {
@@ -6306,7 +6311,8 @@ a.atk-swatch-white:hover,
   border-color: #f5f6f7;
 }
 .atk-swatch-gray,
-a:link.atk-swatch-gray {
+a:link.atk-swatch-gray,
+.atk-swatch-gray:visited {
   color: black;
 }
 .atk-swatch-gray hr {
@@ -6362,7 +6368,8 @@ a.atk-swatch-gray:hover,
   border-color: #1c2933;
 }
 .atk-swatch-ink,
-a:link.atk-swatch-ink {
+a:link.atk-swatch-ink,
+.atk-swatch-ink:visited {
   color: white;
 }
 .atk-swatch-ink hr {
@@ -6418,7 +6425,8 @@ a.atk-swatch-ink:hover,
   border-color: #ffcc00;
 }
 .atk-swatch-yellow,
-a:link.atk-swatch-yellow {
+a:link.atk-swatch-yellow,
+.atk-swatch-yellow:visited {
   color: black;
 }
 .atk-swatch-yellow hr {
@@ -6474,7 +6482,8 @@ a.atk-swatch-yellow:hover,
   border-color: #f9451f;
 }
 .atk-swatch-red,
-a:link.atk-swatch-red {
+a:link.atk-swatch-red,
+.atk-swatch-red:visited {
   color: white;
 }
 .atk-swatch-red hr {
@@ -6530,7 +6539,8 @@ a.atk-swatch-red:hover,
   border-color: #00cc66;
 }
 .atk-swatch-green,
-a:link.atk-swatch-green {
+a:link.atk-swatch-green,
+.atk-swatch-green:visited {
   color: white;
 }
 .atk-swatch-green hr {
@@ -6586,7 +6596,8 @@ a.atk-swatch-green:hover,
   border-color: #0095ff;
 }
 .atk-swatch-blue,
-a:link.atk-swatch-blue {
+a:link.atk-swatch-blue,
+.atk-swatch-blue:visited {
   color: white;
 }
 .atk-swatch-blue hr {
@@ -6643,7 +6654,8 @@ a.atk-swatch-blue:hover,
   border-color: #3b5999;
 }
 .atk-swatch-facebook,
-a:link.atk-swatch-facebook {
+a:link.atk-swatch-facebook,
+.atk-swatch-facebook:visited {
   color: white;
 }
 .atk-swatch-facebook hr {
@@ -6699,7 +6711,8 @@ a.atk-swatch-facebook:hover,
   border-color: #55acee;
 }
 .atk-swatch-twitter,
-a:link.atk-swatch-twitter {
+a:link.atk-swatch-twitter,
+.atk-swatch-twitter:visited {
   color: white;
 }
 .atk-swatch-twitter hr {
