--- a/playground/css/style-fluid.css
+++ b/playground/css/style-fluid.css
@@ -5268,6 +5268,7 @@ label.atk-input-label em {
 }
 .atk-input-icon input {
   padding-right: 1.4em;
+  width: 100%;
 }
 .atk-input-icon *[class*=icon] {
   position: absolute;
@@ -6041,6 +6042,9 @@ ul[class*=atk-menu].atk-menu-vertical > li *[class*=atk-menu] {
 .atk-inline {
   display: inline-block;
 }
+.atk-block {
+  display: block;
+}
 .atk-jackscrew {
   width: 100%;
 }
@@ -6248,7 +6252,8 @@ img.atk-shape-circle {
   border-color: #ffffff;
 }
 .atk-swatch-white,
-a:link.atk-swatch-white {
+a:link.atk-swatch-white,
+.atk-swatch-white:visited {
   color: black;
 }
 .atk-swatch-white hr {
@@ -6304,7 +6309,8 @@ a.atk-swatch-white:hover,
   border-color: #f5f6f7;
 }
 .atk-swatch-gray,
-a:link.atk-swatch-gray {
+a:link.atk-swatch-gray,
+.atk-swatch-gray:visited {
   color: black;
 }
 .atk-swatch-gray hr {
@@ -6360,7 +6366,8 @@ a.atk-swatch-gray:hover,
   border-color: #1c2933;
 }
 .atk-swatch-ink,
-a:link.atk-swatch-ink {
+a:link.atk-swatch-ink,
+.atk-swatch-ink:visited {
   color: white;
 }
 .atk-swatch-ink hr {
@@ -6416,7 +6423,8 @@ a.atk-swatch-ink:hover,
   border-color: #ffcc00;
 }
 .atk-swatch-yellow,
-a:link.atk-swatch-yellow {
+a:link.atk-swatch-yellow,
+.atk-swatch-yellow:visited {
   color: black;
 }
 .atk-swatch-yellow hr {
@@ -6472,7 +6480,8 @@ a.atk-swatch-yellow:hover,
   border-color: #f9451f;
 }
 .atk-swatch-red,
-a:link.atk-swatch-red {
+a:link.atk-swatch-red,
+.atk-swatch-red:visited {
   color: white;
 }
 .atk-swatch-red hr {
@@ -6528,7 +6537,8 @@ a.atk-swatch-red:hover,
   border-color: #00cc66;
 }
 .atk-swatch-green,
-a:link.atk-swatch-green {
+a:link.atk-swatch-green,
+.atk-swatch-green:visited {
   color: white;
 }
 .atk-swatch-green hr {
@@ -6584,7 +6594,8 @@ a.atk-swatch-green:hover,
   border-color: #0095ff;
 }
 .atk-swatch-blue,
-a:link.atk-swatch-blue {
+a:link.atk-swatch-blue,
+.atk-swatch-blue:visited {
   color: white;
 }
 .atk-swatch-blue hr {
