--- a/playground/includes/playground-components.jade
+++ b/playground/includes/playground-components.jade
@@ -203,7 +203,7 @@ section#components
           span.atk-cell
             span.atk-label.atk-size-milli.atk-shape-circle.atk-swatch-green 1
       li.atk-swatch-green
-        a.atk-padding-small.atk-swatch-gray.atk-cells(href='/layouts/fixed.html')
+        a.atk-padding-small.atk-swatch-ink.atk-cells(href='javascript:void(0)')
           span.atk-cell.atk-jackscrew
             span.icon-chart-line
             | &nbsp;
@@ -216,7 +216,7 @@ section#components
           li
             a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #2
           li
-            a.atk-padding-small.atk-swatch-gray(href='/layouts/fluid.html') Subitem #3
+            a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #3
           li
             a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #4
           li
