--- a/playground/includes/playground-widgets.jade
+++ b/playground/includes/playground-widgets.jade
@@ -611,3 +611,7 @@ section#widgets
           .atk-popover.atk-popover-bottom-right.atk-box.atk-align-center.atk-size-kilo.atk-swatch-green
             | .atk-popover-bottom-right
             .atk-popover-arrow
+
+  h3 Loader
+  .atk-box.atk-inline
+    button.atk-button#example-loader Start Loader
