--- a/playground/index.jade
+++ b/playground/index.jade
@@ -23,3 +23,6 @@ html(class='no-js')
       include includes/footer
     include includes/scripts
     include includes/analytics
+    .atk-loader
+      .atk-loader-align
+        .atk-loader-cogs.atk-box.atk-size-zetta
