--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -418,6 +418,10 @@ ul[class*=atk-menu] {
             padding-bottom: @margin*2;
             padding-top: @margin*2;
         }
+        &.atk-section-xlarge {
+            padding-bottom: @margin*3;
+            padding-top: @margin*3;
+        }
         &.atk-section-reset {
             padding-top: 0;
             padding-bottom: 0;
