atk-loader is non click-throughable now.

--- a/framework/less/widgets.less
+++ b/framework/less/widgets.less
@@ -233,7 +233,7 @@
     .position(fixed, @t:0, @l:0);
     display: none;
     height: 100%;
-    pointer-events: none;
+    // pointer-events: none;
     width: 100%;
     .atk-loader-align {
         display: table-cell;
