Introduced new '.atk-banner' widget.

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -16,6 +16,9 @@
 .atk-text-reset {
     .clear-font;
 }
+.atk-text-baseline-reset {
+    line-height: 1;
+}
 .atk-text-ellipsis {
     display: inline-block;
     overflow: hidden;
