--- a/playground/includes/playground-components.jade
+++ b/playground/includes/playground-components.jade
@@ -320,7 +320,9 @@ section#components
     .atk-actions
       button.atk-button Add
       button.atk-button Edit
-      button.atk-button.atk-effect-danger Delete
+      button.atk-button.atk-effect-danger 
+        span.icon-trash
+        | &nbsp;Delete
   h4 Separator
   p
     span.atk-label.atk-effect-info .atk-sep
