Few changes in playground.

--- a/playground/includes/playground-widgets.jade
+++ b/playground/includes/playground-widgets.jade
@@ -507,7 +507,7 @@ section#widgets
           .atk-cell.atk-text-reset
             img.atk-shape-circle(src='temp/apples.jpg', alt='Apples', width='32')
           .atk-cell
-            | John Smith
+            | John Smith&nbsp;
             span.icon-down-dir
   h4 Boxed Navigation Bar
   p
@@ -541,7 +541,7 @@ section#widgets
           .atk-cell.atk-text-reset
             img.atk-shape-circle(src='temp/apples.jpg', alt='Apples', width='32')
           .atk-cell
-            | John Smith
+            | John Smith&nbsp;
             span.icon-down-dir
   h4 Fixed Navigation Bar
   p
