--- a/playground/includes/playground-forms.jade
+++ b/playground/includes/playground-forms.jade
@@ -65,7 +65,7 @@ section#forms
                 button.atk-button Cancel
     .span_6.col
       .atk-box
-        form.atk-cells-group.atk-cells-gutter-large.atk-newform.atk-valign-top
+        form.atk-cells-group.atk-cells-gutter-large.atk-valign-top
           .atk-cells.atk-push
             .atk-cell.atk-text-nowrap
               label.atk-input-label 
@@ -97,7 +97,7 @@ section#forms
     | &nbsp;decreases margins between field rows.
   .row
     .span_6.col
-      .atk-box.span_6
+      .atk-box
         .atk-form.atk-form-compact
           form
             .atk-form-fieldset
@@ -120,7 +120,7 @@ section#forms
                 button.atk-button Cancel
     .span_6.col
       .atk-box
-        form.atk-cells-group.atk-cells-gutter-large.atk-newform
+        form.atk-cells-group.atk-cells-gutter-large
           .atk-cells.atk-push-small
             .atk-cell.atk-text-nowrap
               label.atk-input-label
@@ -170,7 +170,7 @@ section#forms
               button.atk-button Cancel
     .span_6.col 
       .atk-box
-        form.atk-newform
+        form
           .atk-push-xsmall
             label
               strong Input:
@@ -213,7 +213,7 @@ section#forms
               button.atk-button Cancel
     .span_6.col 
       .atk-box
-        form.atk-newform
+        form
           .atk-push-small
             div.atk-push-small
               label
