--- a/playground/includes/playground-widgets.jade
+++ b/playground/includes/playground-widgets.jade
@@ -624,5 +624,5 @@ section#widgets
   .atk-banner.atk-cells#banner-notification
     .atk-cell.atk-align-center.atk-valign-middle
       .atk-box.atk-inline(style="width:180px")
-        .icon-mail-1.atk-size-yotta.atk-push-small.atk-text-baseline-reset
+        .icon-mail-alt.atk-size-yotta.atk-push-small.atk-text-baseline-reset
         h5 Verification link sent to your email
