--- a/playground/includes/playground-components.jade
+++ b/playground/includes/playground-components.jade
@@ -6,7 +6,7 @@ section#components
     | &nbsp;component can be assigned to any element. Text color will adapt based on luma value (perceptual brightness) of the swatch. You can easily create as many swatches as you need using&nbsp;
     span.atk-label.atk-effect-info .createSwatch()
     | &nbsp;mixin (see variables.less).
-  #example-swatches.atk-box.row
+  #example-swatches.atk-box
     .row
       .col.span_4
         .atk-swatch-ink.atk-box-small.atk-align-center .atk-swatch-ink
