--- a/playground/layouts.jade
+++ b/playground/layouts.jade
@@ -82,5 +82,13 @@ html(class='no-js')
                               span.atk-box.atk-inline
                         .atk-align-center.atk-size-kilo
                           a(href='layouts/centered.html') Centered
+                    .span_4.col
+                      .atk-box-small.layout-template
+                        a.atk-box-small.atk-swatch-gray.atk-push-small(href='layouts/responsive.html')
+                          span.atk-cells.atk-push-small
+                            span.atk-cell.atk-align-center.atk-valign-middle.atk-text-reset(style='height: 139px;')
+                              span.atk-box.atk-inline
+                        .atk-align-center.atk-size-kilo
+                          a(href='layouts/responsive.html') Responsive
     include includes/scripts
     include includes/analytics
