--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -2,9 +2,13 @@
 // Layout
 // ==========================================================
 
-@windowMinWidth:       960px; // Should be equal or greater than @siteMinWidth
 @siteMinWidth:         800px; // Side paddings are dropped if value is in percentages
 @siteMaxWidth:         1600px; // Put the same value as in @siteMinWidth if fixed layout is required
+@siteMargin:           80px; // Margin between site's content and browser's edge
+
+.createBreakPoint(@min:0, @max:479px, @cols:3, @colsGutter: 20px,  @breakLayout:true);
+.createBreakPoint(@min:480px, @max:768px, @cols:6, @colsGutter: 30px, @breakLayout:true);
+.createBreakPoint(@min:769px, @max:10000px, @cols:12, @colsGutter: 2%);
 
 
 // ==========================================================
