--- a/playground/css/style-example-login.css
+++ b/playground/css/style-example-login.css
@@ -32,7 +32,105 @@
 .mixin-span_first {
   margin-left: 0;
 }
-/* 1. 12 Column Grid 0px - Infinity 
+/* 1. 3 Column Grid 0px - 477px 
+    ----------------------------------------------------------------------------- 
+    
+    Span 1:    33.3333333333%
+    Span 2:    66.6666666667%
+    Span 3:    100%
+    
+    ----------------------------------------------------------------------------- */
+@media screen and (min-width: 0px) and (max-width: 477px) {
+  .row {
+    margin-left: -20px;
+  }
+  .col {
+    border-left-width: 20px;
+    padding: 0 0%;
+  }
+  /* --- Gridpak variables ---*/
+  /*
+        Add your semantic classnames in alongside their corresponding spans here. e.g.
+        
+        .span_3,
+        .my_semantic_class_name {
+            ...
+        }
+        
+        */
+  .span_1 {
+    width: 33.33333333%;
+    border-left-width: 20px;
+    padding: 0 0%;
+    margin-left: 0;
+  }
+  .span_2 {
+    width: 66.66666667%;
+    border-left-width: 20px;
+    padding: 0 0%;
+    margin-left: 0;
+  }
+  .span_3 {
+    margin-left: 0;
+    width: 100%;
+  }
+}
+/* 2. 6 Column Grid 478px - 778px 
+    ----------------------------------------------------------------------------- 
+    
+    Span 1:    16.6666666667%
+    Span 2:    33.3333333333%
+    Span 3:    50.0%
+    Span 4:    66.6666666667%
+    Span 5:    83.3333333333%
+    Span 6:    100%
+    
+    ----------------------------------------------------------------------------- */
+@media screen and (min-width: 478px) and (max-width: 778px) {
+  .row {
+    margin-left: -30px;
+  }
+  .col {
+    border-left-width: 30px;
+    padding: 0 0%;
+  }
+  /* --- Gridpak variables ---*/
+  .span_1 {
+    width: 16.66666667%;
+    border-left-width: 30px;
+    padding: 0 0%;
+    margin-left: 0;
+  }
+  .span_2 {
+    width: 33.33333333%;
+    border-left-width: 30px;
+    padding: 0 0%;
+    margin-left: 0;
+  }
+  .span_3 {
+    width: 50%;
+    border-left-width: 30px;
+    padding: 0 0%;
+    margin-left: 0;
+  }
+  .span_4 {
+    width: 66.66666667%;
+    border-left-width: 30px;
+    padding: 0 0%;
+    margin-left: 0;
+  }
+  .span_5 {
+    width: 83.33333333%;
+    border-left-width: 30px;
+    padding: 0 0%;
+    margin-left: 0;
+  }
+  .span_6 {
+    margin-left: 0;
+    width: 100%;
+  }
+}
+/* 3. 12 Column Grid 779px - Infinity 
     ----------------------------------------------------------------------------- 
     
     Span 1:    8.33333333333%
@@ -49,88 +147,79 @@
     Span 12:    100%
     
     ----------------------------------------------------------------------------- */
-@media screen and (min-width: 0px) {
+@media screen and (min-width: 779px) {
   .row {
     margin-left: -40px;
   }
   .col {
     border-left-width: 40px;
-    padding: 0 0px;
+    padding: 0 0%;
   }
   /* --- Gridpak variables ---*/
-  /*
-        Add your semantic classnames in alongside their corresponding spans here. e.g.
-        
-        .span_3,
-        .my_semantic_class_name {
-            ...
-        }
-        
-        */
   .span_1 {
     width: 8.33333333%;
     border-left-width: 40px;
-    padding: 0 0px;
+    padding: 0 0%;
     margin-left: 0;
   }
   .span_2 {
     width: 16.66666667%;
     border-left-width: 40px;
-    padding: 0 0px;
+    padding: 0 0%;
     margin-left: 0;
   }
   .span_3 {
     width: 25%;
     border-left-width: 40px;
-    padding: 0 0px;
+    padding: 0 0%;
     margin-left: 0;
   }
   .span_4 {
     width: 33.33333333%;
     border-left-width: 40px;
-    padding: 0 0px;
+    padding: 0 0%;
     margin-left: 0;
   }
   .span_5 {
     width: 41.66666667%;
     border-left-width: 40px;
-    padding: 0 0px;
+    padding: 0 0%;
     margin-left: 0;
   }
   .span_6 {
     width: 50%;
     border-left-width: 40px;
-    padding: 0 0px;
+    padding: 0 0%;
     margin-left: 0;
   }
   .span_7 {
     width: 58.33333333%;
     border-left-width: 40px;
-    padding: 0 0px;
+    padding: 0 0%;
     margin-left: 0;
   }
   .span_8 {
     width: 66.66666667%;
     border-left-width: 40px;
-    padding: 0 0px;
+    padding: 0 0%;
     margin-left: 0;
   }
   .span_9 {
     width: 75%;
     border-left-width: 40px;
-    padding: 0 0px;
+    padding: 0 0%;
     margin-left: 0;
   }
   .span_10 {
     width: 83.33333333%;
     border-left-width: 40px;
-    padding: 0 0px;
+    padding: 0 0%;
     margin-left: 0;
   }
   .span_11 {
     width: 91.66666667%;
     border-left-width: 40px;
-    padding: 0 0px;
+    padding: 0 0%;
     margin-left: 0;
   }
   .span_12 {
@@ -5949,9 +6038,6 @@ ul[class*=atk-menu] > li.atk-menu-active > a:hover {
 ul[class*=atk-menu]:not([class*=atk-actions]) > li {
   margin-left: 0;
 }
-ul[class*=atk-menu].atk-menu-horizontal > li > a {
-  text-align: center;
-}
 ul[class*=atk-menu].atk-menu-horizontal > li > a *[class*='icon']:before {
   margin: 0;
 }
@@ -6067,32 +6153,56 @@ ul[class*=atk-menu].atk-menu-vertical > li *[class*=atk-menu] {
 .atk-valign-bottom {
   vertical-align: bottom !important;
 }
-*[class*=atk-push]:not(:last-child).atk-push-xsmall {
+*[class*=atk-push].atk-push-xsmall {
   margin-bottom: 0.53rem;
 }
-*[class*=atk-push]:not(:last-child).atk-push-small {
-  margin-bottom: 0.8rem;
-}
-*[class*=atk-push]:not(:last-child).atk-push {
-  margin-bottom: 1.6rem;
-}
-*[class*=atk-push]:not(:last-child).atk-push-large {
-  margin-bottom: 3.2rem;
-}
-*[class*=atk-push]:not(:last-child).atk-push-reset {
-  margin-bottom: 0;
-}
-.atk-cells-group > *[class*=atk-push]:not(:last-child).atk-push-xsmall > .atk-cell {
+.atk-cells-group > *[class*=atk-push].atk-push-xsmall > .atk-cell {
   padding-bottom: 0.53rem;
 }
-.atk-cells-group > *[class*=atk-push]:not(:last-child).atk-push-small > .atk-cell {
+*[class*=atk-push].atk-push-xsmall.atk-row {
+  margin-bottom: -0.53rem;
+}
+*[class*=atk-push].atk-push-xsmall.atk-row > *[class*=atk-col] {
+  margin-bottom: 0.53rem;
+}
+*[class*=atk-push].atk-push-small {
+  margin-bottom: 0.8rem;
+}
+.atk-cells-group > *[class*=atk-push].atk-push-small > .atk-cell {
   padding-bottom: 0.8rem;
 }
-.atk-cells-group > *[class*=atk-push]:not(:last-child).atk-push > .atk-cell {
+*[class*=atk-push].atk-push-small.atk-row {
+  margin-bottom: -0.8rem;
+}
+*[class*=atk-push].atk-push-small.atk-row > *[class*=atk-col] {
+  margin-bottom: 0.8rem;
+}
+*[class*=atk-push].atk-push {
+  margin-bottom: 1.6rem;
+}
+.atk-cells-group > *[class*=atk-push].atk-push > .atk-cell {
   padding-bottom: 1.6rem;
 }
-.atk-cells-group > *[class*=atk-push]:not(:last-child).atk-push-large > .atk-cell {
+*[class*=atk-push].atk-push.atk-row {
+  margin-bottom: -1.6rem;
+}
+*[class*=atk-push].atk-push.atk-row > *[class*=atk-col] {
+  margin-bottom: 1.6rem;
+}
+*[class*=atk-push].atk-push-large {
+  margin-bottom: 3.2rem;
+}
+.atk-cells-group > *[class*=atk-push].atk-push-large > .atk-cell {
   padding-bottom: 3.2rem;
+}
+*[class*=atk-push].atk-push-large.atk-row {
+  margin-bottom: -3.2rem;
+}
+*[class*=atk-push].atk-push-large.atk-row > *[class*=atk-col] {
+  margin-bottom: 3.2rem;
+}
+*[class*=atk-push].atk-push-reset {
+  margin-bottom: 0;
 }
 *[class*=atk-padding],
 .ui-tabs *[class*=atk-padding].ui-tabs-panel.ui-widget-content {
@@ -6237,6 +6347,232 @@ img.atk-shape-circle {
   filter: blur(5px);
 }
 /* Helpers, Colors, Boxes, Buttons etc. */
+@media screen and (min-width: 0) and (max-width: 479px) {
+  *[class*=atk-col] {
+    border: 0px solid rgba(0, 0, 0, 0);
+    border-left-width: 20px;
+    width: 100%;
+  }
+  .atk-col-1,
+  .atk-col-1[class*=atk-col] {
+    width: 33.33333333%;
+  }
+  *[class*=atk-col] {
+    border: 0px solid rgba(0, 0, 0, 0);
+    border-left-width: 20px;
+    width: 100%;
+  }
+  .atk-col-2,
+  .atk-col-2[class*=atk-col] {
+    width: 66.66666667%;
+  }
+  *[class*=atk-col] {
+    border: 0px solid rgba(0, 0, 0, 0);
+    border-left-width: 20px;
+    width: 100%;
+  }
+  .atk-col-3,
+  .atk-col-3[class*=atk-col] {
+    width: 100%;
+  }
+  .atk-row {
+    margin-left: -20px;
+  }
+  .atk-row > *[class*=atk-col] {
+    border-left-width: 20px;
+  }
+  .atk-layout,
+  .atk-layout > .atk-layout-column,
+  .atk-layout .atk-layout-cell,
+  .atk-layout .atk-layout-row {
+    display: block;
+  }
+  .atk-layout .atk-layout-row {
+    height: auto;
+  }
+  *[class*=atk-menu] > li > *[class*=atk-menu] {
+    bottom: 0 !important;
+    left: 0 !important;
+    position: relative !important;
+    right: 0 !important;
+    top: 0 !important;
+  }
+  *[class*=atk-menu] > li > *[class*=atk-menu].atk-menu-horizontal > li {
+    display: block;
+    float: none;
+  }
+  *[class*=atk-menu] > li:hover > *[class*=atk-menu] {
+    display: none !important;
+  }
+  *[class*=atk-menu] > li:focus {
+    display: none !important;
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 768px) {
+  *[class*=atk-col] {
+    border: 0px solid rgba(0, 0, 0, 0);
+    border-left-width: 30px;
+    width: 100%;
+  }
+  .atk-col-1,
+  .atk-col-1[class*=atk-col] {
+    width: 16.66666667%;
+  }
+  *[class*=atk-col] {
+    border: 0px solid rgba(0, 0, 0, 0);
+    border-left-width: 30px;
+    width: 100%;
+  }
+  .atk-col-2,
+  .atk-col-2[class*=atk-col] {
+    width: 33.33333333%;
+  }
+  *[class*=atk-col] {
+    border: 0px solid rgba(0, 0, 0, 0);
+    border-left-width: 30px;
+    width: 100%;
+  }
+  .atk-col-3,
+  .atk-col-3[class*=atk-col] {
+    width: 50%;
+  }
+  *[class*=atk-col] {
+    border: 0px solid rgba(0, 0, 0, 0);
+    border-left-width: 30px;
+    width: 100%;
+  }
+  .atk-col-4,
+  .atk-col-4[class*=atk-col] {
+    width: 66.66666667%;
+  }
+  *[class*=atk-col] {
+    border: 0px solid rgba(0, 0, 0, 0);
+    border-left-width: 30px;
+    width: 100%;
+  }
+  .atk-col-5,
+  .atk-col-5[class*=atk-col] {
+    width: 83.33333333%;
+  }
+  *[class*=atk-col] {
+    border: 0px solid rgba(0, 0, 0, 0);
+    border-left-width: 30px;
+    width: 100%;
+  }
+  .atk-col-6,
+  .atk-col-6[class*=atk-col] {
+    width: 100%;
+  }
+  .atk-row {
+    margin-left: -30px;
+  }
+  .atk-row > *[class*=atk-col] {
+    border-left-width: 30px;
+  }
+  .atk-layout,
+  .atk-layout > .atk-layout-column,
+  .atk-layout .atk-layout-cell,
+  .atk-layout .atk-layout-row {
+    display: block;
+  }
+  .atk-layout .atk-layout-row {
+    height: auto;
+  }
+  *[class*=atk-menu] > li > *[class*=atk-menu] {
+    bottom: 0 !important;
+    left: 0 !important;
+    position: relative !important;
+    right: 0 !important;
+    top: 0 !important;
+  }
+  *[class*=atk-menu] > li > *[class*=atk-menu].atk-menu-horizontal > li {
+    display: block;
+    float: none;
+  }
+  *[class*=atk-menu] > li:hover > *[class*=atk-menu] {
+    display: none !important;
+  }
+  *[class*=atk-menu] > li:focus {
+    display: none !important;
+  }
+}
+@media screen and (min-width: 769px) and (max-width: 10000px) {
+  .atk-col-1 {
+    width: 6.5%;
+  }
+  .atk-col-1.atk-col-12 {
+    width: 100%;
+  }
+  .atk-col-2 {
+    width: 15%;
+  }
+  .atk-col-2.atk-col-12 {
+    width: 100%;
+  }
+  .atk-col-3 {
+    width: 23.5%;
+  }
+  .atk-col-3.atk-col-12 {
+    width: 100%;
+  }
+  .atk-col-4 {
+    width: 32%;
+  }
+  .atk-col-4.atk-col-12 {
+    width: 100%;
+  }
+  .atk-col-5 {
+    width: 40.5%;
+  }
+  .atk-col-5.atk-col-12 {
+    width: 100%;
+  }
+  .atk-col-6 {
+    width: 49%;
+  }
+  .atk-col-6.atk-col-12 {
+    width: 100%;
+  }
+  .atk-col-7 {
+    width: 57.5%;
+  }
+  .atk-col-7.atk-col-12 {
+    width: 100%;
+  }
+  .atk-col-8 {
+    width: 66%;
+  }
+  .atk-col-8.atk-col-12 {
+    width: 100%;
+  }
+  .atk-col-9 {
+    width: 74.5%;
+  }
+  .atk-col-9.atk-col-12 {
+    width: 100%;
+  }
+  .atk-col-10 {
+    width: 83%;
+  }
+  .atk-col-10.atk-col-12 {
+    width: 100%;
+  }
+  .atk-col-11 {
+    width: 91.5%;
+  }
+  .atk-col-11.atk-col-12 {
+    width: 100%;
+  }
+  .atk-col-12 {
+    width: 100%;
+  }
+  .atk-col-12.atk-col-12 {
+    width: 100%;
+  }
+  .atk-row > *[class*=atk-col] + *[class*=atk-col] {
+    margin-left: 2%;
+  }
+}
 .atk-swatch-white {
   background: #ffffff;
   border-color: #ffffff;
@@ -6637,6 +6973,21 @@ a.atk-swatch-blue:hover,
   color: white;
 }
 /* Use this less file if you want to customize your theme. */
+.atk-row {
+  *zoom: 1;
+}
+.atk-row:before,
+.atk-row:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.atk-row:after {
+  clear: both;
+}
+.atk-row > *[class*=atk-col] {
+  float: left;
+}
 .atk-swatch-facebook {
   background: #3b5999;
   border-color: #3b5999;
