--- a/playground/css/style-fluid.less
+++ b/playground/css/style-fluid.less
@@ -2,6 +2,6 @@
 
 // Testing out different styling configurations
 
-@windowMinWidth:       100%; // Should be equal or greater than @siteMinWidth
 @siteMinWidth:         100%; // Side paddings are dropped if value is in percentages
-@siteMaxWidth:         100%; // Put the same value as in @siteMinWidth if fixed layout is required
+@siteMaxWidth:         1600px; // Put the same value as in @siteMinWidth if fixed layout is required
+@siteMargin:           0; // Margin between site's content and browser's edge
